[gd_scene load_steps=6 format=2]

[ext_resource path="res://Game.gd" type="Script" id=1]
[ext_resource path="res://Assets/snake.png" type="Texture" id=2]
[ext_resource path="res://Assets/apple.png" type="Texture" id=3]
[ext_resource path="res://TextConfig.tres" type="DynamicFont" id=4]

[sub_resource type="TileSet" id=1]
0/name = "apple.png 0"
0/texture = ExtResource( 3 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 25, 25 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0
1/name = "snake.png 1"
1/texture = ExtResource( 2 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 0, 0, 25, 25 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape_one_way = false
1/shape_one_way_margin = 0.0
1/shapes = [  ]
1/z_index = 0

[node name="Game" type="Node2D"]
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 800.0
margin_bottom = 500.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="ColorRect"]
margin_left = 2.0
margin_top = 2.0
margin_right = 798.0
margin_bottom = 498.0
color = Color( 0.568627, 0.65098, 0.360784, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SnakeApple" type="TileMap" parent="."]
tile_set = SubResource( 1 )
cell_size = Vector2( 25, 25 )
format = 1
__meta__ = {
"_editor_description_": ""
}

[node name="Timer" type="Timer" parent="."]
wait_time = 0.2
autostart = true

[node name="finalScoreContainer" type="MarginContainer" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 800, 500 )
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="finalScoreContainer"]
margin_right = 800.0
margin_bottom = 500.0
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="finalScoreContainer/CenterContainer"]
margin_top = 192.0
margin_right = 800.0
margin_bottom = 308.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="Label" type="Label" parent="finalScoreContainer/CenterContainer/VBoxContainer"]
margin_top = 171.0
margin_right = 800.0
margin_bottom = 207.0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "GAME OVER"
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="finalScoreContainer/CenterContainer/VBoxContainer"]
margin_top = 211.0
margin_right = 800.0
margin_bottom = 247.0
rect_min_size = Vector2( 800, 0 )
size_flags_horizontal = 0
size_flags_vertical = 0
alignment = 1

[node name="Label" type="Label" parent="finalScoreContainer/CenterContainer/VBoxContainer/HBoxContainer"]
margin_left = 288.0
margin_right = 438.0
margin_bottom = 36.0
rect_min_size = Vector2( 150, 0 )
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "SCORE"
align = 1

[node name="finalScoreText" type="Label" parent="finalScoreContainer/CenterContainer/VBoxContainer/HBoxContainer"]
margin_left = 442.0
margin_right = 511.0
margin_bottom = 36.0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "170"
align = 1

[node name="Label2" type="Label" parent="finalScoreContainer/CenterContainer/VBoxContainer"]
margin_top = 251.0
margin_right = 800.0
margin_bottom = 287.0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Press space to restart"
align = 1
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
